-Paul Owens protected games:     85.7 % working
-Speedlock protected games:      54.2 % working
-Alkatraz protected games:          0 % working
-Unknown method protected games:    0 % working (a total of 15 disks that seem to be protected but don't know the method)

Fixed almost all annoying audio clicks on Windows version (and on SDL audio driver on Linux)
Fixed random crash on startup on Linux when executing some network operations (check updates, check last users, send updates)
Fixed segfaults when exiting using CTRL-C
Fixed autoload on Spectrum +3
Fixed bug that may crash ZEsarUX when changing to a machine with bigger resolution. It seems to affect Linux and Windows but not Mac. This is a bug that has always existed (a "long life bug" XD)
Fixed showing creator on DSK file viewer
Fixed pause: can now return when pressing mouse button too
Fixed assembler parsing expressions (NN) and NN is an hexadecimal number
Fixed debug step over and sending keys to emulated machine
Fixed setting "set machine snap load" when loading .Z80 version 1 snapshots
Fixed real joystick menu disabled on Mac OS when switching border

* Misc Changes:

Persistent writes on DSK files (+3/CPC/PCW disks) are now disabled by default 

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.2 - Hysteria edition. 26 October 2022

* New things added:

Added configurable icons to the ZX Desktop. These icons can:
-Open windows, for example View Sprites
-Trigger actions, like Reset
-File links, these are linked to tapes or snapshots on your disk drive
-There are other special icons, like Trash Can
These icons opens a whole new world on ZEsarUX, so the ZX Desktop is becoming a Full Desktop environment :)

Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C
-Microdigital TK83
-Microdigital TK85
-Microdigital TK95 Spanish
-Timex Computer 2048
-Timex Computer 2068
-Timex Sinclair 1000