@@ -147,6 +147,8 @@ Seria: error message: igual que hay ahora. Y luego clases: 0001 out of memory. 0
 
 -tecla Copy en CPC está asignada a tecla Home del teclado de pc. Quizá cambiar tecla a otra, o poder asignar otra. copy es tambien fire por defecto...
 
+-quiza obtener mas info en descargas speccy online: autor, tamaño archivo, etc
+
 --Fin mejoras
 
 
