@@ -1,5 +1,1 @@
 Para esta version:
-
-
--Revisar queries wos. Parece que army moves y otros que funcionaban, ya no
-
